fixed alignement$

--- a/_sass/so-simple/_global.scss
+++ b/_sass/so-simple/_global.scss
@@ -54,7 +54,8 @@ hr {
     }
 
     @include breakpoint($medium) {
-    margin-left: 65%;
+      text-align: left;
+      margin-left: 65%;
     }
 
     @include breakpoint($xlarge) {
