--- a/_sass/so-simple/_masthead.scss
+++ b/_sass/so-simple/_masthead.scss
@@ -4,14 +4,20 @@ header.masthead {
   position: relative;
   background-position-y: bottom;
   background-size: cover;
-  
+  display: block;
+
   .page-heading,
   .post-heading,
   .site-heading {
+
     @include breakpoint($small) {
       display: none;
     }
-    
+
+    @include breakpoint($medium) {
+      display: block;
+    }
+
     padding: 130px 0 70px;
     color: white;
     @media only screen and (min-width: 768px) {
